kclvm/tools/src/LSP/src/snapshots/kcl_language_server__signature_help__tests__function_signatue_help_test_3.snap
---
source: tools/src/LSP/src/signature_help.rs
expression: "format!(\"{:#?}\", res)"
---
SignatureHelp {
    signatures: [
        SignatureInformation {
            label: "function func(x: any, y: any, z: any) -> any",
            documentation: None,
            parameters: Some(
                [
                    ParameterInformation {
                        label: Simple(
                            "x: any",
                        ),
                        documentation: None,
                    },
                    ParameterInformation {
                        label: Simple(
                            "y: any",
                        ),
                        documentation: None,
                    },
                    ParameterInformation {
                        label: Simple(
                            "z: any",
                        ),
                        documentation: None,
                    },
                ],
            ),
            active_parameter: Some(
                3,
            ),
        },
    ],
    active_signature: None,
    active_parameter: None,
}
